Avoid scrollbars on Chrome
The #app div had a 1px margin which caused scrollbars to appear on Chrome. The ALttP tracker have no outer margin so I opted for removing it here as well.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .row:after { clear: both; }
 .cell { position: relative; float: left; }
 
-#app { width: 826px; height: 337px; margin: 1px; }
+#app { width: 826px; height: 337px; }
 
 #tracker {
   width: 344px;
